# ChangeLog for dev-ruby/locale
# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-ruby/locale/ChangeLog,v 1.20 2010/04/18 13:58:15 nixnut Exp $

  18 Apr 2010; <nixnut@gentoo.org> locale-2.0.5.ebuild:
  ppc stable #302042

  17 Feb 2010; Markus Meier <maekke@gentoo.org> locale-2.0.5.ebuild:
  amd64 stable, bug #302042

  13 Feb 2010; Raúl Porcel <armin76@gentoo.org> locale-2.0.5.ebuild:
  ia64/sparc stable wrt #302042

  11 Feb 2010; Christian Faulhammer <fauli@gentoo.org> locale-2.0.5.ebuild:
  stable x86, bug 302042

  10 Jan 2010; nixnut <nixnut@gentoo.org> locale-2.0.4.ebuild:
  ppc stable #295944

  15 Dec 2009; Raúl Porcel <armin76@gentoo.org> locale-2.0.4.ebuild:
  ia64/sparc stable wrt #295944

  09 Dec 2009; Markus Meier <maekke@gentoo.org> locale-2.0.4.ebuild:
  amd64/x86 stable, bug #295944

  29 Nov 2009; Hans de Graaff <graaff@gentoo.org> Manifest:
  Update Manifest for the version on the gemcutter.org mirrors.

*locale-2.0.5 (28 Nov 2009)

  28 Nov 2009; Hans de Graaff <graaff@gentoo.org> +locale-2.0.5.ebuild:
  Version bump.

  05 Nov 2009; Raúl Porcel <armin76@gentoo.org> locale-2.0.4.ebuild:
  Add ~ia64/~sparc wrt #289839

  26 Oct 2009; Mounir Lamouri <volkmar@gentoo.org> locale-2.0.4.ebuild:
  Keywording for ppc, bug 289839

  24 Aug 2009; Hans de Graaff <graaff@gentoo.org> -locale-2.0.3.ebuild:
  Remove old version.

  13 Jun 2009; Hans de Graaff <graaff@gentoo.org> locale-2.0.4.ebuild:
  Add ~alpha keyword, closing #272772. Thanks to Yuta Satoh for testing.

  13 Jun 2009; Hans de Graaff <graaff@gentoo.org> locale-2.0.4.ebuild:
  Also keyword latest version ~ppc64.

  25 May 2009; Brent Baude <ranger@gentoo.org> locale-2.0.3.ebuild:
  keyworded ~arch for ppc64, bug 270557

*locale-2.0.4 (24 May 2009)

  24 May 2009; Hans de Graaff <graaff@gentoo.org> -locale-2.0.0.ebuild,
  -locale-2.0.1.ebuild, -locale-2.0.2.ebuild, +locale-2.0.4.ebuild: