@@ -1,6 +1,15 @@
-DIST locale-2.0.4.gem 109568 RMD160 053456ec91702942561b1532031e8193ded1ad14 SHA1 87ef06a729696b1fe335c476816ad7476095971c SHA256 1bb101b1823770f453ede3d2da429641bf7c8a8e4dd0cc07d775eadab35ec0bb
+-----BEGIN PGP SIGNED MESSAGE-----
+Hash: SHA1
+
 DIST locale-2.0.5.gem 111104 RMD160 3b32340c2983e2cf707a52868a6152a6e74505d2 SHA1 70962dd7b0fe9b1eb59775e8fed2a2543d1b5361 SHA256 28baf0410c9742eb49402200f47b99d9d4b793e02a5436a7275a89d273eafe00
-EBUILD locale-2.0.4.ebuild 452 RMD160 b7fbf6f46519ea1cb0d29030d774cae58bb324cc SHA1 1d177fb781f196ff6a537896368a98a5cbfdffb6 SHA256 86f2f5705b4788c1967714556f2f2a6ced55b4bc15f6b92cfeda15aa8a42c0c2
+EBUILD locale-2.0.5-r1.ebuild 828 RMD160 65caf28b91bb8558a50137bfc700826ceb3f8e45 SHA1 5773be024860980aed53729fd74704c020f8e2ba SHA256 b83d95014429388d1327c98f687d2dffeaa51bf07a49a8f638fd929ecaca75f9
 EBUILD locale-2.0.5.ebuild 452 RMD160 aec862ff9e182fc2d0c6e865b37d2fc92ad8cf1c SHA1 7139846adf20fa5cb7301175cbe398593455b448 SHA256 2cb2b338a20e0f7156f5920b25e201a38b6da2c1cda20783a19747219c05996c
-MISC ChangeLog 2716 RMD160 19f84b302927f933652063cc9d47781ee64eab32 SHA1 adcf98e3ff210747efecfa6743e6568249841db6 SHA256 41c4042cee31d43b8f16e9ace49c4a2099ef868ee2f5f4655a846477545eb4d4
+MISC ChangeLog 2917 RMD160 bbfe0d6cd7aef0d6535af532c4ff527c2ceb99d5 SHA1 fd7d505dc766640f1397a2d105033a188ddbcb33 SHA256 363904a1100e8b1560cdad2ee540b4e75471825f10224447354d097e870a90de
 MISC metadata.xml 158 RMD160 097f8145a9994f98be4971b43b23b9e5e8bccb66 SHA1 7ac646714b1ab83fda98f3ccdd8b48a31c148b27 SHA256 70b396ab3c7a63a81cb895b7728bd9eccdc9770afdb9919f2c54694b685f7032
+-----BEGIN PGP SIGNATURE-----
+Version: GnuPG v2.0.15 (GNU/Linux)
+
+iEYEARECAAYFAkv4M0UACgkQAiZjviIA2XgO0ACgy7xFjj+F6aLnP6YJNh/A8ZPQ
+/OcAnjR9mvx0QLYdFgpchFptjEa1r2GB
+=cRP4
+-----END PGP SIGNATURE-----
