@@ -1,15 +1,0 @@
-# Copyright 1999-2010 Gentoo Foundation
-# Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/dev-ruby/locale/locale-2.0.4.ebuild,v 1.8 2010/01/10 18:37:56 nixnut Exp $
-
-inherit gems
-
-DESCRIPTION="A pure ruby library which provides basic APIs for localization."
-HOMEPAGE="http://locale.rubyforge.org/"
-LICENSE="Ruby"
-
-KEYWORDS="~alpha amd64 ia64 ppc ~ppc64 sparc x86"
-SLOT="0"
-IUSE=""
-
-USE_RUBY="ruby18"
